# Wordom

./: .gitignore  CHANGELOG  CMakeLists.txt  README  README.md
doc/: old2new.py  pywordom_ug.tex  wordom_ug.tex
src/: .gcluster.ptx.swp  Test  analysis.c  analysis.h  cluster.c  cluster.h  com.c  com.h  corr.c  corr.h  datahandler.c  datahandler.h  enm.c  enm.h  fileio.c  fileio.h  fileio.i  flux.c  flux.h  fnmatch.c  gCluster.cu  gCluster.cubin  gCluster.h  gCluster2.cu  gClusterClean.cu  gClusterCopy.cu  gClusterCopy2.cu  geometry.c  geometry.h  hole.c  hole.h  kga.c  kga.h  main.c  make.file  messages.h  moldiff.c  moldiff.h  occupancy.cu  pca.c  (+36 more)
tests/: CMakeLists.txt  wrdmacro.cmake
tests/cluster1/: c_leader.ref  cluster1.inp  cluster1.out.ref  matrix_cluster.dat.ref  runtest.cmake
tests/cluster2/: c_hiero.ref  c_qt  cluster2.inp  cluster2.out.ref  runtest.cmake
tests/com/: com.inp  com.out.ref  runtest.cmake
tests/corr/: corr.inp  corr.out.ref  corr1.ref  corr2.ref  runtest.cmake
tests/flux/: flux.inp  flux.out.ref  pent-trans.dat.ref  runtest.cmake
tests/gCluster/: gCluster1.inp  gCluster2.inp  g_DRMS.out.ref  g_DRMS.ref  g_RMSD.out.ref  g_RMSD.ref
tests/geometry/: geometry.inp  geometry.out.ref  runtest.cmake  with1.within.ref
tests/hole1/: 4COF-prof.dat.ref  4COF-traj.vtf.ref  runtest.cmake
tests/hole2/: 2VL0a-prof.dat.ref  2VL0a-traj.vtf.ref  hole.inp
tests/hole3/: 2VL0b-prof.dat.ref  2VL0b-traj.vtf.ref  hole.inp  runtest.cmake
tests/moldiff/: moldiff.inp  moldiff.out.ref  rmsfX.ref
tests/pca/: pca-eigval.txt.ref  pca-matrix.txt.ref  pca.inp  runtest.cmake
tests/proj/: eigvec.txt  proj.inp  proj.out.ref  runtest.cmake
tests/psn/: avgpsn1.ref  psn.inp  psn.out.ref
tests/ssa/: runtest.cmake  ssa.inp  ssa.out.ref
tests/surface/: pio.out  runtest.cmake  surface.inp  surface.out.ref  volume.inp  volume.inp~
tests/tilt_twist/: runtest.cmake  tilt_twist.inp  tilt_twist.out.ref
